# rocket3d

./: CMakeLists.txt  model.h  scene.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/: blinnmaterial.h  eventmanager.h  material.h  mechanics.h  mesh.h  rigidbody.h  scene.h  shader.h  shadermanager.h  ship.h  spaceobject.h  window.h
meshes/: cone.off  sphere.off  tchouri.off  triangulate.py
shaders/: advanced_blinn_fs.glsl  blinn_fs.glsl  fs.glsl  phong_fs.glsl  vs.glsl
src/: app.cpp  blinnmaterial.cpp  eventmanager.cpp  glad.c  mechanics.cpp  mesh.cpp  scene.cpp  ship.cpp  spaceobject.cpp  window.cpp
